--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Natural history -- Juvenile fiction'
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Whaling -- Juvenile fiction'
+- GITenberg
 title: The World of Ice
 url: http://www.gutenberg.org/ebooks/21711
